--- a/templates/about.html
+++ b/templates/about.html
@@ -5,10 +5,27 @@
 
 {% block content %}
 
-    <div class="col-md-9 content">
-        <h1>This is all about the project management app and it's authors.</h1>
-        <img src="{% static 'img/testing_meme3.jpg' %}">
-    </div>
+<div class="col-md-9 content">
+    <h1>About Qlickbook</h1>
+    <p> The creation of Qlickbook stems from the idea of a SCRUM project manager app. The intention was to create an
+        application that would be able to help a company or individual better manage time and hit deadlines as they
+        come.
+        With our app, I strongly believe that your scheduling will be flawless and all your deadlines will be met.
+        Currently the creators are new and upcoming into the tech industry with hopes of finding that perfect work/life
+        balance. This application was built by three individuals while enrolled in an online web development full stack
+        immersive. The concepts of web development that were learned are reflecting in this application. The
+        foundational functionality for this app was created in around two weeks, however this application will be
+        continually updated to create a better and better version of itself. Thank you for your support! The tools used
+        in the project include: Python/Django SQLITE3 Bootstrap Javascript CSS </p>
+
+    <a href="https://github.com/KyleDHaywood"> <img class="rounded-circle img-fluid"
+            src="{% static 'img/Kyleprofile.jpg' %}" alt="Kyle-Haywood"></a>
+    <a href="https://github.com/milesinada"><img class="rounded-circle img-fluid"
+            src="{% static 'img/Milesprofile.jpg' %}" alt="Miles-Inada"></a>
+    <a href="https://github.com/raymarco1023"><img class="rounded-circle img-fluid"
+            src="{% static 'img/Rayprofile.jpg' %}" alt="Ray-Garcia"></a>
+
+</div>
 
 
 {% endblock content %}
