--- a/templates/base.html
+++ b/templates/base.html
@@ -2,112 +2,121 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'css/index.css' %}">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
-    
-    <!-- CUSTOM STYLES FOR THIS TEMPLATE -->
-    <link href="{% static 'assets/css/toolkit-inverse.css' %}" rel="stylesheet">
-    
-    <link href="{% static 'assets/css/application.css' %}" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+  <link rel="stylesheet" href="{% static 'css/index.css' %}">
+  <link rel="stylesheet" href="{% static 'css/about.css' %}">
+  <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet">
 
-    <style>
-      /* note: this is a hack for ios iframe for bootstrap themes shopify page */
-      /* this chunk of css is not part of the toolkit :) */
-      body {
-        width: 1px;
-        min-width: 100%;
-        *width: 100%;
-      }
-    </style>
-    <title>{% block title %}QlickBook{% endblock title %}</title>
+
+  <!-- CUSTOM STYLES FOR THIS TEMPLATE -->
+  <link href="{% static 'assets/css/toolkit-inverse.css' %}" rel="stylesheet">
+
+  <link href="{% static 'assets/css/application.css' %}" rel="stylesheet">
+
+  <style>
+    /* note: this is a hack for ios iframe for bootstrap themes shopify page */
+    /* this chunk of css is not part of the toolkit :) */
+    body {
+      width: 1px;
+      min-width: 100%;
+      *width: 100%;
+    }
+  </style>
+  <title>{% block title %}QlickBook{% endblock title %}</title>
 </head>
+
 <body>
-  <div class="container"><div class="row">
-    <div class="col-md-3 sidebar">
-      <nav class="sidebar-nav">
-        <div class="sidebar-header">
-          <button class="nav-toggler nav-toggler-md sidebar-toggler" type="button" data-toggle="collapse" data-target="#nav-toggleable-md">
-            <span class="sr-only">Toggle nav</span>
-          </button>
-          <a class="sidebar-brand img-responsive" href="{% url 'home' %}">
-            <span class="icon icon-leaf sidebar-brand-icon"></span>
-          </a>
-          <a class="btn btn-sm btn-primary" href="/admin">Portal</a>
-
-        </div>
-
-        <div class="collapse nav-toggleable-md" id="nav-toggleable-md">
-          <form class="sidebar-form">
-            <input class="form-control" type="text" placeholder="Search...">
-            <button type="submit" class="btn-link">
-              <span class="icon icon-magnifying-glass"></span>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-3 sidebar">
+        <nav class="sidebar-nav">
+          <div class="sidebar-header">
+            <button class="nav-toggler nav-toggler-md sidebar-toggler" type="button" data-toggle="collapse"
+              data-target="#nav-toggleable-md">
+              <span class="sr-only">Toggle nav</span>
             </button>
-          </form>
-          <ul class="nav nav-pills nav-stacked flex-column">
-            <li class="nav-header">Public</li>
-            <li class="nav-item">
-              <a class="nav-link active" href="{% url 'home' %}">Overview</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link "href="{% url 'about' %}">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="{% url 'faq' %}">FAQ</a>
-            </li>
-            {% if user.is_authenticated %}
-            
-            <li class="nav-header">Private</li>
-            <li class="nav-item">
-              <a class="nav-link " href="{% url 'dashboard' %}">Dashboard</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link " href="{% url 'ticket-history' %}">Ticket history</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link "href="{% url 'project_list' %}">
-                Project List
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'project_new' %}" target="blank">
-                New Project
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'contact' %}" data-toggle="modal">
-                Contact
-              </a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link bg-danger " href="{% url 'logout' %}">Logout</a>
-            </li>
-          {% endif %}
-            
-          </ul>
-          <hr class="visible-xs mt-3">
-        </div>
-      </nav>
-     
+            <a class="sidebar-brand img-responsive" href="{% url 'home' %}">
+              <span class="icon icon-leaf sidebar-brand-icon"></span>
+            </a>
+            <a class="btn btn-sm btn-primary" href="/admin">Portal</a>
+
+          </div>
+
+          <div class="collapse nav-toggleable-md" id="nav-toggleable-md">
+            <form class="sidebar-form">
+              <input class="form-control" type="text" placeholder="Search...">
+              <button type="submit" class="btn-link">
+                <span class="icon icon-magnifying-glass"></span>
+              </button>
+            </form>
+            <ul class="nav nav-pills nav-stacked flex-column">
+              <li class="nav-header">Public</li>
+              <li class="nav-item">
+                <a class="nav-link active" href="{% url 'home' %}">Overview</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url 'about' %}">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url 'faq' %}">FAQ</a>
+              </li>
+              {% if user.is_authenticated %}
+
+              <li class="nav-header">Private</li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url 'dashboard' %}">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url 'ticket-history' %}">Ticket history</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link " href="{% url 'project_list' %}">
+                  Project List
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'project_new' %}" target="blank">
+                  New Project
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'contact' %}" data-toggle="modal">
+                  Contact
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link bg-danger " href="{% url 'logout' %}">Logout</a>
+              </li>
+              {% endif %}
+
+            </ul>
+            <hr class="visible-xs mt-3">
+          </div>
+        </nav>
+
+      </div>
+      {% block content %}
+
+      {% endblock content %}
     </div>
-    {% block content %}
-    
-    {% endblock content %}
-  </div>
-  
-  
 
 
-   
+
+
+
 
     <!-- JavaScript Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
+    </script>
     <script src="{% static 'assets/js/jquery.min.js' %}"></script>
     <script src="{% static 'assets/js/tether.min.js' %}"></script>
     <script src="{% static 'assets/js/chart.js' %}"></script>
@@ -116,7 +125,12 @@
     <script src="{% static 'assets/js/application.js' %}"></script>
     <script>
       // execute/clear BS loaders for docs
-      $(function(){while(window.BS&&window.BS.loader&&window.BS.loader.length){(window.BS.loader.pop())()}})
+      $(function () {
+        while (window.BS && window.BS.loader && window.BS.loader.length) {
+          (window.BS.loader.pop())()
+        }
+      })
     </script>
 </body>
+
 </html>
